<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".scene.address.EnergyAddressActivity">

    <include layout="@layout/toolbar" />

    <com.youtility.energyswitchcui.customview.CustomTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_45sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/select_address"
        android:textColor="@color/gray_blue_shade"
        android:textSize="@dimen/font_heading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvHeader"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />


        <com.youtility.energyswitchcui.customview.CustomTextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_44sdp"
            android:layout_marginRight="@dimen/_44sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/text_no_address_result"
            android:textColor="@color/colorVeryLightBlue"
            android:textSize="@dimen/font_medium"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_gradient"
        android:focusable="true"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.youtility.energyswitchcui.customview.CustomButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/button_bg"
                android:enabled="false"
                android:fontFamily="@font/roboto_regular"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/text_continue"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </FrameLayout>


    </LinearLayout>


</RelativeLayout>