<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_enery_flow" />

    <com.youtility.energyswitchcui.customview.CustomTextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:textColor="@color/gray_blue_shade"
        android:textSize="@dimen/font_heading" />


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInstruction"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:textColor="@color/colorVeryLightBlue"
        android:textSize="@dimen/font_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical">
        <com.youtility.energyswitchcui.customview.CustomTextView
            android:id="@+id/tvLablePostcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorAccent"
            android:text="@string/postcode"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.youtility.energyswitchcui.customview.CustomEditText
                android:id="@+id/etPostcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textColor="@color/gray_blue_shade"
                android:textSize="@dimen/font_medium" />



        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/not_valid_uk_code"
            android:textColor="@color/pink"
            android:textSize="@dimen/font_small"
            android:visibility="gone" />

        <com.youtility.energyswitchcui.customview.CustomButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_bg"
            android:enabled="false"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/txt_continue"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>